// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeClass options 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "activeClass": "test-active",
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "useActiveClass": true,
  },
  "html": "<a href=\\"/base\\" class=\\"test-active\\"></a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "test-active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "",
    "types": Array [],
    "useActiveClass": true,
  },
}
`;

exports[`className option & useActiveClass & activeClass 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "activeClass": "test-active",
    "className": "foo",
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "useActiveClass": true,
  },
  "html": "<a href=\\"/base\\" class=\\"foo test-active\\"></a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "test-active",
    "className": "foo",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "",
    "types": Array [],
    "useActiveClass": true,
  },
}
`;

exports[`className option 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "className": "foo bar",
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "text": "Base page",
  },
  "html": "<a href=\\"/base\\" class=\\"foo bar\\">Base page</a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "foo bar",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
}
`;

exports[`click 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
  },
  "html": "<a href=\\"/base\\" class=\\"\\"></a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "",
    "types": Array [],
    "useActiveClass": false,
  },
}
`;

exports[`destroy 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "text": "Base page",
  },
  "html": "<a href=\\"/base\\" class=\\"\\">Base page</a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
}
`;

exports[`params options 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {
      "id": 1,
    },
    "path": "base",
  },
  "html": "<a href=\\"/base/1\\" class=\\"\\"></a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {
      "id": 1,
    },
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "",
    "types": Array [],
    "useActiveClass": false,
  },
}
`;

exports[`remove 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "text": "Base page",
  },
  "html": "",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
}
`;

exports[`render correctly 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "text": "Base page",
  },
  "html": "<a href=\\"/base\\" class=\\"\\">Base page</a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "Base page",
    "types": Array [],
    "useActiveClass": false,
  },
}
`;

exports[`useActiveClass options 1`] = `
Object {
  "ID": "widget",
  "constructorOptions": Object {
    "directives": Object {
      "onclick": [Function],
    },
    "path": "base",
    "useActiveClass": true,
  },
  "html": "<a href=\\"/base\\" class=\\"active\\"></a>",
  "nodes": Array [
    Object {
      "ID": undefined,
      "constructorOptions": null,
      "html": null,
      "nodes": null,
      "options": null,
    },
  ],
  "options": Object {
    "actionSequence": Array [
      "render",
      "bindEvents",
    ],
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "onclick": [Function],
    },
    "params": Object {},
    "path": "base",
    "renderAsync": false,
    "renderDependence": Array [],
    "text": "",
    "types": Array [],
    "useActiveClass": true,
  },
}
`;
